Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18743

sanity-scrub test fail with debug enabled kernels.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.17.0
    • Lustre 2.17.0
    • Clients running a RHEL8 debug kernel.
    • 3
    • 9223372036854775807

      Current for RHEL8 debug kernels sanity-scrub test will fail on the clients with the following error:

      WARNING: CPU: 1 PID: 37 at include/linux/backing-dev.h:291 ll_writepages+0x3dd/0x400 [lustre]

      [ 1266.941486] Workqueue: writeback wb_workfn (flush-lustre-ffff8f09f4)

      [ 1266.951369] RIP: 0010:ll_writepages+0x3dd/0x400 [lustre] [ 1266.953378] Code: e8 f8 9b e9 f4 48 83 05 d0 02 0f 00 01 85 c0 74 11 48 83 05 cc 02 0f 00 01 0f b6 43 24 e9 09 fd ff ff 48 83 05 c3 02 0f 00 01 <0f> 0b 48 83 05 c1 02 0f 00 01 48 83 05 c1 02 0f 00 01 e9 5f ff ff [ 1266.962419] RSP: 0018:ffffafd900da3b58 EFLAGS: 00010202

      [ 1267.025525] Call Trace: [ 1267.032775] ? show_regs.cold.9+0x22/0x2f

      [ 1267.042520] ? __warn+0xc8/0x150 [ 1267.043623] ? ll_writepages+0x3dd/0x400 [lustre]

            simmonsja James A Simmons
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: