lustre/llite/rw.c
@@ -1609,11 +1609,13 @@ int ll_writepages(struct address_space *mapping, struct writeback_control *wbc)
 		 * The system is under memory pressure and it is now reclaiming
 		 * cache pages.
 		 */
+		spin_lock(&inode->i_lock);
 		wb = inode_to_wb(inode);
 		if (wbc->for_background ||
 		    (wb->start_all_reason == WB_REASON_VMSCAN &&
 		     test_bit(WB_start_all, &wb->state)))
 			mode = CL_FSYNC_RECLAIM;
+		spin_unlock(&inode->i_lock);
 #else
 		/*
 		 * We have no idea about writeback reason for memory reclaim
